Corrigiendo imagen de España

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         agregarNodoAContenedor(nombreSpain, divSpain)
         agregarNodoAContenedor(divSpain, divTargeta4)
         divImagenSpain = crearNodo("div")
-        imagenSpain = crearNodoIamgen("spain.png", "Spain")
+        imagenSpain = crearNodoIamgen("Spain.png", "Spain")
         agregarNodoAContenedor(imagenSpain, divImagenSpain)
         agregarNodoAContenedor(divImagenSpain, divTargeta4)
         divLugaresSpain = crearNodo("div")
